Fixed empty scrollbar

--- a/src/components/WorldClock/styles.css
+++ b/src/components/WorldClock/styles.css
@@ -7,7 +7,7 @@
   padding: 1rem;
   max-width: 80vw;
   max-height: 95vh;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .worldclock-heading {
